refactor: create method for perfil