@@ -1,9 +1,6 @@
 package br.com.barber.jhow.service;
 
-import br.com.barber.jhow.controller.dto.AllBarbersResponse;
-import br.com.barber.jhow.controller.dto.LoginRequest;
-import br.com.barber.jhow.controller.dto.LoginResponse;
-import br.com.barber.jhow.controller.dto.SignRequest;
+import br.com.barber.jhow.controller.dto.*;
 import br.com.barber.jhow.entities.RoleEntity;
 import br.com.barber.jhow.entities.UserEntity;
 import br.com.barber.jhow.enums.RoleEnum;
@@ -11,6 +8,7 @@ import br.com.barber.jhow.exceptions.user.UserAlreadyExistsException;
 import br.com.barber.jhow.exceptions.user.UserBadCredentialsException;
 import br.com.barber.jhow.exceptions.user.UserNotFoundException;
 import br.com.barber.jhow.repositories.UserRepository;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.oauth2.jwt.JwtClaimsSet;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
@@ -18,10 +16,8 @@ import org.springframework.security.oauth2.jwt.JwtEncoderParameters;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -30,12 +26,14 @@ public class UserService {
     private final BCryptPasswordEncoder bCryptPasswordEncoder;
     private final JwtEncoder jwtEncoder;
     private final RoleService roleService;
+    private final SchedulingService schedulingService;
 
-    public UserService(UserRepository userRepository, BCryptPasswordEncoder bCryptPasswordEncoder, JwtEncoder jwtEncoder, RoleService roleService) {
+    public UserService(UserRepository userRepository, BCryptPasswordEncoder bCryptPasswordEncoder, JwtEncoder jwtEncoder, RoleService roleService, @Lazy SchedulingService schedulingService) {
         this.userRepository = userRepository;
         this.bCryptPasswordEncoder = bCryptPasswordEncoder;
         this.jwtEncoder = jwtEncoder;
         this.roleService = roleService;
+        this.schedulingService = schedulingService;
     }
 
     public UserEntity createUser(SignRequest signRequest) {
@@ -43,7 +41,6 @@ public class UserService {
             throw new UserAlreadyExistsException("User with email " + signRequest.email() + " already exists");
 
         RoleEntity roleEntity = this.roleService.getRoleEntity(signRequest.role());
-        System.out.println(roleEntity.getType());
 
         UserEntity user = new UserEntity(
                 signRequest.email(),
@@ -80,10 +77,20 @@ public class UserService {
         return new LoginResponse(jwtValue,expiresIn);
     }
 
-    public UserEntity getById(UUID id) {
+    public UserEntity getUserById(UUID id) {
 
         return this.userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException("User with id " + id + " not found"));
+    }
+
+    public PerfilResponse getPerfilById(UUID id, Integer page, Integer pageSize) {
+        var user = this.getUserById(id);
+        var historySchedule = this.schedulingService.appointmentHistoryByUserID(id, page, pageSize);
+
+        return new PerfilResponse(user.getName(),
+                user.getEmail(),
+                historySchedule.getContent(),
+                new PaginationDto(page,pageSize,historySchedule.getTotalElements(),historySchedule.getTotalPages()));
     }
 
     public List<UserEntity> getAllUsers() {
@@ -91,10 +98,10 @@ public class UserService {
     }
 
     public List<AllBarbersResponse> getAllBarbers() {
-        return userRepository.findByRole_Type(RoleEnum.ADMIN)
+        return this.userRepository.findByRole_Type(RoleEnum.BARBER)
                 .stream()
                 .map(barber -> new AllBarbersResponse(barber.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
